--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,9 @@ passlib = "^1.7.4"
 loguru = "^0.6.0"
 requests = "^2.28.1"
 matplotlib = "^3.6.2"
+beautifulsoup4 = "^4.11.1"
+lxml = "^4.9.1"
+feedparser = "^6.0.10"
 
 
 [tool.poetry.dev-dependencies]
