docs: update readme.md

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Debug
 DEBUG=False
 
+# FRONTEND
+REACT_APP_API_URL=YOUR_REACT_APP_API_URL
+
 # Application
 BACKEND_TTILE=YOUR_BACKEND_TTILE
 BACKEND_DESCRIPTION=YOUR_BACKEND_DESCRIPTION
