--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     ports:
       - "80:80"
     environment:
-      REACT_APP_API_URL: ${FRONTEND_API_URL}
+      REACT_APP_API_URL: ${REACT_APP_API_URL}
 
   backend:
     build:
